don't reindex after adding gb